--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,20 @@
     font-style: normal;
     font-size: 14px;
 }
+
+.error-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+.error-page h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.error-page p {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
